<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="59dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cleare_btn"
                style="@style/Base.Widget.AppCompat.Button.Gray"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/clearEntry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear_btn"
                style="@style/Base.Widget.AppCompat.Button.Gray"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/clear" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bsCS_btn"
                style="@style/Base.Widget.AppCompat.Button.Gray"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/bs" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/chia_btn"
                style="@style/Base.Widget.AppCompat.Button.Gray"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/division" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bay_btn"
                style="@style/Base.Widget.AppCompat.Button.White"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/seven" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tam_btn"
                style="@style/Base.Widget.AppCompat.Button.White"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/eight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/chin_btn"
                style="@style/Base.Widget.AppCompat.Button.White"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/nine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nhan_btn"
                style="@style/Base.Widget.AppCompat.Button.Gray"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/multiplication" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="256dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bon_btn"
                style="@style/Base.Widget.AppCompat.Button.White"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nam_btn"
                style="@style/Base.Widget.AppCompat.Button.White"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sau_btn"
                style="@style/Base.Widget.AppCompat.Button.White"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/six" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tru_btn"
                style="@style/Base.Widget.AppCompat.Button.Gray"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/mot_btn"
                style="@style/Base.Widget.AppCompat.Button.White"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/hai_btn"
                style="@style/Base.Widget.AppCompat.Button.White"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ba_btn"
                style="@style/Base.Widget.AppCompat.Button.White"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/three" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cong_btn"
                style="@style/Base.Widget.AppCompat.Button.Gray"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/plus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/congtru_btn"
                style="@style/Base.Widget.AppCompat.Button.Gray"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/plusMinus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/khong_btn"
                style="@style/Base.Widget.AppCompat.Button.White"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cham_btn"
                style="@style/Base.Widget.AppCompat.Button.Gray"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/point" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bang_btn"
                style="@style/Base.Widget.AppCompat.Button.Gray"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/equals" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/Base.Widget.AppCompat.Button.Gray"
        android:layout_width="408dp"
        android:layout_height="284dp"
        android:gravity="center||right"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>