<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".Calculator"
    android:weightSum="5">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="3"
        android:orientation="vertical">
<!--        <TextView-->
<!--            android:layout_weight="2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@color/gray"-->
<!--            android:gravity="center|right"-->
<!--            android:id="@+id/hienThiPhepTinhCu">-->
<!--        </TextView>-->
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0"
            android:textSize="100dp"
            android:textColor="@color/black"
            android:gravity="center|right"
            android:background="@color/gray">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3"
        android:weightSum="5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/clearEntry"
                android:onClick="clearEntryEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/gray"
                android:layout_weight="1"
                android:id="@+id/ce_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:onClick="clearEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/gray"
                android:layout_weight="1"
                android:id="@+id/c_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bs"
                android:textSize="28dp"
                android:backgroundTint="@color/gray"
                android:layout_weight="1"
                android:id="@+id/bs_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/division"
                android:onClick="operatorEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/gray"
                android:layout_weight="1"
                android:id="@+id/division_btn"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/seven"
                android:onClick="numberEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:id="@+id/seven_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:onClick="numberEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:id="@+id/eight_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:onClick="numberEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:id="@+id/nine_btn"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiplication_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:onClick="operatorEvent"
                android:text="@string/multiplication"
                android:textAllCaps="false"
                android:textSize="28dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:onClick="numberEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:id="@+id/four_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:onClick="numberEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:id="@+id/five_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:onClick="numberEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:id="@+id/six_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:onClick="operatorEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/gray"
                android:layout_weight="1"
                android:id="@+id/minus_btn"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:onClick="numberEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:id="@+id/one_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:onClick="numberEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:id="@+id/two_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:onClick="numberEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:id="@+id/three_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:onClick="operatorEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/gray"
                android:layout_weight="1"
                android:id="@+id/plus_btn"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/plusMinus"
                android:textSize="28dp"
                android:backgroundTint="@color/gray"
                android:layout_weight="1"
                android:id="@+id/plus_minus_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:onClick="numberEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:id="@+id/zero_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/point"
                android:textSize="28dp"
                android:backgroundTint="@color/gray"
                android:layout_weight="1"
                android:id="@+id/point_btn"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/equals"
                android:onClick="equalEvent"
                android:textSize="28dp"
                android:backgroundTint="@color/gray"
                android:layout_weight="1"
                android:id="@+id/equals_btn"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>